# fs_minizip

./: Pipfile  Readme.md  pyproject.toml
fs_minizip/: __init__.py  minizip.py
test/: __init__.py  test_minizip.py
