[tool.poetry]
name = "fs.minizip"
version = "0.1.0"
description = "Wrap minizip for python filesystem"
authors = ["tzing <tzingshih@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.5"
pyminizip = "^0.2.4"
fs = "^2.4.11"

[tool.poetry.dev-dependencies]
pytest-cov = "^2.8.1"
pytest = "^5.3.2"
black = { version = "^19.10b0", python = ">=3.6" }

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.black]
py36 = false
